# linkbox

./: .gitignore  .yamllint.yml  CICD-SETUP.md  DATABASE-CONNECTIVITY.md  DATABASE-GUIDE.md  DEPLOYMENT-GUIDE.md  DOCUMENTATION-MAP.md  IAM-DATABASE-AUTHENTICATION.md  IAM-IMPLEMENTATION-SUMMARY.md  README.md  WEBHOOK-SETUP.md  appspec.yml  architecture.drawio  changeset.sh  cli-commands.txt  delete.sh  deploy.sh  infrastructure-diagram.md  network-parameters.json  network.yml  test-bastion-s3.sh  test-s3-access.md
backend/: .gitignore  Dockerfile  ENV.EXAMPLE  LOCAL-DEVELOPMENT.md  Makefile  README.md  dev.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/core/: config.py
backend/app/utils/: db_iam_auth.py  id.py
backend/tests/: test_id.py
cicd/: BUILDSPEC-FIX.md  buildspec-backend.yml  buildspec-frontend.yml
docs/: CONSOLIDATION-SUMMARY.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
infrastructure/: 01-network.yml  02-database.yml  03-backend.yml  04-frontend.yml  05-cicd.yml  CICD-VERIFICATION.md  INFRASTRUCTURE-FIXES.md  README.md  SSM-PARAMETER-NOTES.md  UPDATE-GUIDE.md  deploy-frontend.sh  deploy.sh  diagram-mermaid.md  diagram-plantuml.puml  get-ami-id.sh  main.yml  quick-update.sh  update-stack.sh
legacy/: README.md
network-v2/: network-v2.yml
networking/: network-parameters.json  network-single-nat.yml
scripts/: install_dependencies.sh  setup_iam_db_user.sh  start_application.sh  start_application_iam.sh  stop_application.sh
servers-and-security-groups/: servers-parameters.json  servers.yml
(+13 files in other folders)
